--- a/style.css
+++ b/style.css
@@ -1,3 +1,98 @@
-h1 {
-    color: blue;
+body {
+    margin: 0;
+    background: rgb(255,140,0);
+    background: linear-gradient(223deg, rgba(255,140,0,1) 0%, rgba(199,0,148,1) 100%);
+    height: 100vh;
+}
+
+
+nav {
+    background-color: rgb(227, 227, 227);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    width: 800px;
+    margin: auto;
+    margin-top: 20px;
+}
+
+nav li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 30px 10px 30px;
+    margin: 3px;
+}
+
+nav li:hover, .active {
+    background-color: white;
+}
+
+
+nav a {
+    text-decoration: none;
+    color: black;
+    font-size: large;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+    margin: 0;
+    
+    
+}
+
+.content {
+    margin: auto;
+    width: 800px;
+    text-align: center;
+    background-color: rgb(227, 227, 227);
+    border-radius: 10px;
+    padding: 30px;
+    margin-top: 50px;
+
+}
+
+.aboutButton {
+    border-radius: 28px;
+    text-shadow: 1px 1px 0px #2f6627;
+    background:rgba(255, 111, 97, 1);
+    display: inline-block;
+    width: 200px;
+    padding-top:20px;
+  	padding-bottom:20px;
+    cursor: pointer;
+}
+  
+.aboutButton:hover {
+    background: rgba(255, 73, 55, 1);
+}
+
+.aboutButton a {
+    color:#fff;
+    font-weight:bold;
+    text-decoration: none;
+}
+
+
+
+
+.orarend th, .orarend td {
+    border: 0;
+    border-radius: 10px;
+    background-color: white;
+
+}
+
+.orarend {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    
+}
+
+.orarend th {
+    background-color: lightgray;
 }
