--- a/style.css
+++ b/style.css
@@ -107,3 +107,14 @@ nav ul {
 .svg th {
     background-color: lightgray;
 }
+
+.github {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+
+.github th {
+    background-color: lightgray;
+}
