--- a/hazik.css
+++ b/hazik.css
@@ -1,7 +1,8 @@
 body{
-    color: rgb(177, 24, 24);
-    text-align: center;
-    background-color: black;
+    margin: 0;
+    background: rgb(255,140,0);
+    background: linear-gradient(223deg, rgba(255,140,0,1) 0%, rgba(199,0,148,1) 100%);
+    height: 100vh;
 }
 .container{
     height: 140%;
