--- a/amoba.css
+++ b/amoba.css
@@ -1,9 +1,8 @@
 body {
-    user-select: none;
-    text-align: center;
-    background-color: rgb(252, 228, 197);
-    color: rgb(22, 61, 69);
-    text-shadow: 1px 1px 3px rgb(23, 20, 20);
+    margin: 0;
+    background: rgb(255,140,0);
+    background: linear-gradient(223deg, rgba(255,140,0,1) 0%, rgba(199,0,148,1) 100%);
+    height: 100vh;
 }
 td {
     width: 30px;
