--- a/style.css
+++ b/style.css
@@ -122,13 +122,13 @@ nav ul {
 }
 
 
-.amoba {
+.hazik {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
 }
 
-.amoba th {
+.hazik th {
     background-color: lightgray;
 }
