--- a/haziku.css
+++ b/haziku.css
@@ -4,29 +4,80 @@ body{
     background: linear-gradient(223deg, rgba(255,140,0,1) 0%, rgba(199,0,148,1) 100%);
     height: 100vh;
 }
-.container{
-    height: 140%;
+nav {
+    background-color: rgb(227, 227, 227);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    width: 900px;
+    margin: auto;
+    margin-top: 20px;
+}
+
+nav li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 30px 10px 30px;
+    margin: 3px;
+}
+
+nav li:hover, .active {
+    background-color: white;
+}
+
+
+nav a {
+    text-decoration: none;
+    color: black;
+    font-size: large;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+    margin: 0;
+    
+    
+}
+
+.content {
+    margin: auto;
+    width: 900px;
+    text-align: center;
+    background-color: rgb(227, 227, 227);
+    border-radius: 10px;
+    padding: 30px;
+    margin-top: 50px;
+}
+
+.container {
+    height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
-.buttons{
+
+.buttons {
     display: flex;
     flex-direction: column;
     text-align: center;
 }
-.btn{
+
+.btn {
     text-decoration: none;
     padding: 20px 50px;
     font-size: 1.25rem;
     position: relative;
     margin: 32px;
 }
+
 .btn-3{
     overflow: hidden; 
     color: #fff;
     border-radius: 30px;
-    box-shadow: 0 0 0 0 rgba(143, 64, 248, 0.5), 0 0 0 0 rgba(255, 197, 39, 0.5);
+    box-shadow: 0 0 0 0 rgba(143, 64, 248, 0.5), 0 0 0 0 rgba(255, 255, 255, 0.5);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .btn-3::after{
@@ -37,13 +88,13 @@ body{
     top: -50px;
     left: -100px;
     background-color: #cc6ea3;
-    background-image: linear-gradient(225deg, #d8278e 0%, #e726f8 50%, #000000 100%);
+    background-image: linear-gradient(225deg, #720cef 0%, #e726f8 50%, #000000 100%);
     z-index: -1;
     transition: transform 0.5s ease;
 }
 .btn-3:hover{
     transform: translate(0, -6px);
-    box-shadow: 10px -10px 25px 0 rgba(64, 248, 178, 0.5), -10px 10px 25px 0 rgba(255, 197, 39, 0.5);
+    box-shadow: 10px -10px 25px 0 rgb(255, 255, 255), -10px 10px 25px 0 rgba(218, 218, 218, 0.5);
 }
 .btn-3:hover::after{
     transform: rotate(150deg);
