--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ nav {
     border-radius: 5px;
     display: flex;
     justify-content: center;
-    width: 900px;
+    width: 990px;
     margin: auto;
     margin-top: 20px;
 }
@@ -130,5 +130,15 @@ nav ul {
 }
 
 .hazik th {
+    background-color: lightgray;
+}
+
+.hazifeladat {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+.hazifeladat th {
     background-color: lightgray;
 }
