--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ nav {
     border-radius: 5px;
     display: flex;
     justify-content: center;
-    width: 990px;
+    width: 999px;
     margin: auto;
     margin-top: 20px;
 }
@@ -22,7 +22,7 @@ nav li {
     list-style-type: none;
     display: inline-block;
     padding: 10px 30px 10px 30px;
-    margin: 3px;
+    margin: 2px;
 }
 
 nav li:hover, .active {
@@ -135,7 +135,7 @@ nav ul {
 
 .hazifeladat {
     text-align: center;
-    margin-left: auto;
+    margin-left: auto
     margin-right: auto;
     margin-top: 30px;
 }
