--- a/keypad.css
+++ b/keypad.css
@@ -1,58 +1,24 @@
 body {
-
-    margin: 0;
-    background: rgb(255,140,0);
-    background: linear-gradient(223deg, rgba(255,140,0,1) 0%, rgba(199,0,148,1) 100%);
-    height: 100vh;
-
+    background-color: whitesmoke;
 }
 
-
-nav {
-    background-color: rgb(227, 227, 227);
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    width: 999px;
-    margin: auto;
-    margin-top: 20px;
-}
-
-nav li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 10px 30px 10px 30px;
-    margin: 2px;
-}
-
-nav li:hover, .active {
+.orarend th, .orarend td {
+    border: 0;
+    border-radius: 10px;
     background-color: white;
 }
 
-
-nav a {
-    text-decoration: none;
-    color: black;
-    font-size: large;
-}
-
-nav ul {
-    display: flex;
-    justify-content: center;
-    align-content: space-around;
-    margin: 0;
-    
-    
-}
-td {
-    border-radius: 6px;
-    border: solid 1px black;
-    box-shadow: 1px 1px 3px;
-    width: 70px;
-    text-align: center;
-    height: 40px;
-}
-
 table {
-    border-spacing: 20px;
+    border-radius: 5px;
+    border:  rgba(19, 207, 113, 0.5) 9px dotted;
+
+    
+}
+
+td {
+    border-radius: 5px;
+    box-shadow: 1px 2px 2px black;
+    width: 50px;
+    height: 30px;
+    text-align: center;
 }
